--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="destyle.css">
     <!-- Googlefont -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
@@ -79,48 +79,44 @@
             </section>
         </header>
         <section id="main">
-            <div class="container-fluid">
-                <div class="row">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-                            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active carousel-1 carousel-style">
-                                <div class="carousel-caption">
-                                    <h4 data-aos="fade-down" data-aos-delay="300">New you</h4>
-                                    <h1 class="top-text" data-aos="fade-left" data-aos-delay="300">・STYLISH・</h1>
-                                    <h4 data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004</h4>
-                                </div>
-                            </div>
-                            <div class=" carousel-item carousel-2 carousel-style">
-                                <div class="carousel-caption">
-                                    <h4 data-aos="fade-down">Get noticed</h4>
-                                    <h1 class="top-text" data-aos="fade-left">・FASHION・</h1>
-                                    <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
-                                </div>
-                            </div>
-                            <div class="carousel-item carousel-3 carousel-style">
-                                <div class="carousel-caption">
-                                    <h4>Feel tree</h4>
-                                    <h1 class="top-text" data-aos="fade-left">・COLORS・</h1>
-                                    <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only"></span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only"></span>
-                            </button>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+                    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active carousel-1 carousel-style">
+                        <div class="carousel-caption">
+                            <h4 data-aos="fade-down" data-aos-delay="300">New you</h4>
+                            <h1 class="top-text" data-aos="fade-left" data-aos-delay="300">・STYLISH・</h1>
+                            <h4 data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004</h4>
                         </div>
                     </div>
+                    <div class=" carousel-item carousel-2 carousel-style">
+                        <div class="carousel-caption">
+                            <h4 data-aos="fade-down">Get noticed</h4>
+                            <h1 class="top-text" data-aos="fade-left">・FASHION・</h1>
+                            <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
+                        </div>
+                    </div>
+                    <div class="carousel-item carousel-3 carousel-style">
+                        <div class="carousel-caption">
+                            <h4>Feel tree</h4>
+                            <h1 class="top-text" data-aos="fade-left">・COLORS・</h1>
+                            <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </button>
                 </div>
             </div>
         </section>
@@ -171,7 +167,7 @@
                             <div class="col-md-12">
                                 <div class="our-text">
                                     <p class="text-center mb-3">NEW YORK・SINCE2004</p>
-                                    <h3 class="text-center mb-3">OUR SUCCESS SECRET</h3>
+                                    <h3 class="f-ourhow text-center mb-3">OUR SUCCESS SECRET</h3>
                                     <p class="text-center mb-5 ms-5 me-5">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
@@ -192,7 +188,7 @@
                             <div class="col-md-12">
                                 <div class="our-text">
                                     <p class="text-center mb-3">NEW YORK・SINCE2004</p>
-                                    <h3 class="text-center mb-3">HOW WE DO IT</h3>
+                                    <h3 class="f-ourhow text-center mb-3">HOW WE DO IT</h3>
                                     <p class="text-center mb-5 ms-5 me-5">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
