画像差し替え

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="h-ourhow col-md-6 col-sm-12 p-0">
-                        <div class="h-ourhow our-img-l"></div>
+                        <div class="h-ourhow our-img-1"></div>
                     </div>
-                    <div class="h-ourhow col-md-6 col-sm-12 our-img-r">
+                    <div class="h-ourhow col-md-6 col-sm-12 our-img-c">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="our-text">
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="h-ourhow col-md-6 col-sm-12 our-img-r">
+                    <div class="h-ourhow col-md-6 col-sm-12 our-img-c">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="our-text">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class="h-ourhow col-md-6 col-sm-12 p-0">
-                        <div class="h-ourhow our-img-l"></div>
+                        <div class="h-ourhow our-img-2"></div>
                     </div>
                 </div>
             </div>
