nav,carousel修正,work写真差し替え,carousel修正（フォント調整）,staff写真差し替え

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <section id="top">
                 <div class="container-fuluid">
                     <div class="row">
-                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <nav class="navbar navbar-expand-lg" style="background-color: none;">
                             <div class="container-fluid">
-                                <a class="navbar-brand" href="#">Colors</a>
+                                <a class="navbar-brand text-white" href="#">Colors</a>
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                                     aria-expanded="false" aria-label="Toggle navigation">
@@ -87,37 +87,35 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active carousel-1 carousel-style">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption fs-slide1">
                             <h4 data-aos="fade-down" data-aos-delay="300">New you</h4>
-                            <h1 class="top-text" data-aos="fade-left" data-aos-delay="300">・STYLISH・</h1>
+                            <h1 class="top-text" data-aos="fade-left" data-aos-delay="300">STYLISH</h1>
                             <h4 data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004</h4>
                         </div>
                     </div>
                     <div class=" carousel-item carousel-2 carousel-style">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption fs-slide2">
                             <h4 data-aos="fade-down">Get noticed</h4>
-                            <h1 class="top-text" data-aos="fade-left">・FASHION・</h1>
+                            <h1 data-aos="fade-left">FASHION</h1>
                             <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
                         </div>
                     </div>
                     <div class="carousel-item carousel-3 carousel-style">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption fs-slide3">
                             <h4>Feel tree</h4>
-                            <h1 class="top-text" data-aos="fade-left">・COLORS・</h1>
+                            <h1 data-aos="fade-left">COLORS</h1>
                             <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only"></span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only"></span>
-                    </button>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </a>
             </div>
         </section>
         <section id="workinghours">
@@ -163,7 +161,7 @@
                         <div class="h-ourhow our-img-1"></div>
                     </div>
                     <div class="h-ourhow col-md-6 col-sm-12 our-img-c">
-                        <div class="row">
+                        <div class="row" data-aos="fade-left" data-aos-delay="300">
                             <div class="col-md-12">
                                 <div class="our-text">
                                     <p class="text-center mb-3">NEW YORK・SINCE2004</p>
@@ -184,7 +182,7 @@
                 </div>
                 <div class="row">
                     <div class="h-ourhow col-md-6 col-sm-12 our-img-c">
-                        <div class="row">
+                        <div class="row" data-aos="fade-right" data-aos-delay="300">
                             <div class="col-md-12">
                                 <div class="our-text">
                                     <p class="text-center mb-3">NEW YORK・SINCE2004</p>
@@ -230,44 +228,13 @@
                 </div>
             </div>
         </section>
-        <section id="cast">
+        <section id="staff">
             <div class="container-fluid mt-5 mb-5">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
                         <div class="row">
-                            <div class="col-md-12">
-                                <img class="img-fluid" src="./images/sozai_1.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 text-center">
-                                <p>XXXXXX XXXXXXXXXX</p>
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-md-12 text-center">
-                                <span>HAIRCUTS</span>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-1 offset-4  text-center" style="border-right: solid 1px black;">
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                            </div>
-                            <div class="col-1 text-center" style="border-right: solid 1px black;">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                            </div>
-                            <div class="col-1 text-center" style="border-right: solid 1px black;">
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                            <div class="col-1 text-center">
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <img class="img-fluid" src="./images/sozai_1.jpg" alt="">
+                            <div class="col-md-12 mb-4 mt-5">
+                                <div class="staff-img staff-img1"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -295,10 +262,41 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
                         <div class="row">
-                            <div class="col-md-12">
-                                <img class="img-fluid" src="./images/sozai_1.jpg" alt="">
+                            <div class="col-md-12 mb-4 mt-5">
+                                <div class="staff-img staff-img2"></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <p>XXXXXX XXXXXXXXXX</p>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-12 text-center">
+                                <span>HAIRCUTS</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 offset-4  text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                            <div class="col-1 text-center">
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+                        <div class="row">
+                            <div class="col-md-12 mb-4 mt-5">
+                                <div class="staff-img staff-img3"></div>
                             </div>
                         </div>
                         <div class="row">
