ハンバーガーメニュー修正

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section id="top">
                 <div class="container-fuluid">
                     <div class="row">
-                        <nav class="navbar navbar-expand-lg" style="background-color: none;">
+                        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: none;">
                             <div class="container-fluid">
                                 <a class="navbar-brand text-white" href="#">Colors</a>
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,22 +42,22 @@
                                 <div class="collapse navbar-collapse flex-row-reverse me-5" id="navbarNavDropdown">
                                     <ul class="navbar-nav">
                                         <li class="nav-item me-5">
-                                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
                                         </li>
                                         <li class="nav-item me-5">
-                                            <a class="nav-link" href="#">PAGES</a>
+                                            <a class="nav-link text-white" href="#">PAGES</a>
                                         </li>
                                         <li class="nav-item me-5">
-                                            <a class="nav-link" href="#">PORTFOLIO</a>
+                                            <a class="nav-link text-white" href="#">PORTFOLIO</a>
                                         </li>
                                         <li class="nav-item me-5">
-                                            <a class="nav-link" href="#">BLOG</a>
+                                            <a class="nav-link text-white" href="#">BLOG</a>
                                         </li>
                                         <li class="nav-item me-5">
-                                            <a class="nav-link" href="#">SHOP</a>
+                                            <a class="nav-link text-white" href="#">SHOP</a>
                                         </li>
                                         <li class="nav-item me-5 dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                            <a class="nav-link dropdown-toggle  text-white" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 ELEMENTS
                                             </a>
