--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <link rel="stylesheet" href="destyle.css">
     <!-- Googlefont -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Amita&family=Homemade+Apple&family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;1,900&family=Poppins:wght@200;300&display=swap"
+        rel="stylesheet">
+
+
+
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;600&family=Pacifico&family=Parisienne&display=swap"
+        rel="stylesheet">
+
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
@@ -88,23 +99,23 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active carousel-1 carousel-style">
                         <div class="carousel-caption fs-slide1">
-                            <h4 data-aos="fade-down" data-aos-delay="300">New you</h4>
+                            <h4 class="fs-carousel-text1" data-aos="fade-down" data-aos-delay="300">New you</h4>
                             <h1 class="top-text" data-aos="fade-left" data-aos-delay="300">STYLISH</h1>
                             <h4 data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004</h4>
                         </div>
                     </div>
                     <div class=" carousel-item carousel-2 carousel-style">
                         <div class="carousel-caption fs-slide2">
-                            <h4 data-aos="fade-down">Get noticed</h4>
+                            <h4 class="fs-carousel-text1" data-aos="fade-down">Get noticed</h4>
                             <h1 data-aos="fade-left">FASHION</h1>
                             <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
                         </div>
                     </div>
                     <div class="carousel-item carousel-3 carousel-style">
                         <div class="carousel-caption fs-slide3">
-                            <h4>Feel tree</h4>
+                            <h4 class="fs-carousel-text1">Feel tree</h4>
                             <h1 data-aos="fade-left">COLORS</h1>
-                            <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
+                            <h4 class="fs-carousel-text2" data-aos="fade-up">NEW YORK・SINCE 2004</h4>
                         </div>
                     </div>
                 </div>
@@ -129,9 +140,9 @@
                     <div class="h-workinghours2 col-md-7 col-sm-8">
                         <div class="hours-list hours-text">
                             <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-9 offset-md-1">
                                     <ul>
-                                        <li class="d-flex justify-content-between p-2 mt-2"
+                                        <li class="d-flex justify-content-between p-2"
                                             style="border-bottom: 1px solid #afaaa9;">
                                             <h4>WORKING DAYS</h4>
                                             <p>9AM - 9PM</p>
@@ -207,21 +218,21 @@
             </div>
         </section>
         <section id="countup">
-            <div class="container-fluid backcolor-b d-flex align-items-center justify-content-center">
-                <div class="row pt-5 pb-5">
-                    <div class="col-lg-3 col-md-6 text-center">
+            <div class="container-fluid backcolor-b">
+                <div class="backcolor-b row pt-5 pb-5  d-flex align-items-center justify-content-evenly">
+                    <div class="counter-box col-lg-3 col-md-6 text-center">
                         <span class="counter counter-num-text">125</span>
                         <p class="counter-com-text text-white">FASHION SHOWS</p>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="counter-box col-lg-3 col-md-6 text-center">
                         <span class="counter counter-num-text">300</span>
                         <p class="counter-com-text text-white">WORLDWIDE CUSTOMERS</p>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="counter-box col-lg-3 col-md-6 text-center">
                         <span class="counter counter-num-text">35</span>
                         <p class="counter-com-text text-white">AWORD WINNERS</p>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="counter-box col-lg-3 col-md-6 text-center">
                         <span class="counter counter-num-text">145</span>
                         <p class="counter-com-text text-white">DIFFRENT HAIRSTYLES</p>
                     </div>
@@ -332,7 +343,7 @@
                 <div class="row">
                     <div class="col-md-12 mt-5 mb-5 text-center">
                         <span class="text-white">FOLLOW OUR WORK</span>
-                        <h1 class="text-white mt-3 mb-3">NEWSLETTER</h1>
+                        <h1 class="fs-newsletter text-white mt-3 mb-3">NEWSLETTER</h1>
                         <p class="text-white">Get a shiny, satin-soft hair with the best hair products & a team of
                             hairdressers that will</p>
                         <p class="text-white">transform your look. Follow us!</p>
