--- a/index.html
+++ b/index.html
@@ -98,23 +98,26 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active carousel-1 carousel-style">
                         <div class="carousel-caption fs-slide1">
-                            <h4 class="fs-carousel-text1" data-aos="fade-down" data-aos-delay="300">New you</h4>
-                            <h1 class="top-text" data-aos="fade-left" data-aos-delay="300">STYLISH</h1>
-                            <h4 data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004</h4>
+                            <h4 class="fs-carousel-text1 m-0" data-aos="fade-down" data-aos-delay="300">New you</h4>
+                            <h1 class="top-text mb-2" data-aos="fade-left" data-aos-delay="300">STYLISH</h1>
+                            <h4 class="fs-carousel-text2" data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004
+                            </h4>
                         </div>
                     </div>
                     <div class=" carousel-item carousel-2 carousel-style">
                         <div class="carousel-caption fs-slide2">
-                            <h4 class="fs-carousel-text1" data-aos="fade-down">Get noticed</h4>
-                            <h1 data-aos="fade-left">FASHION</h1>
-                            <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
+                            <h4 class="fs-carousel-text1 m-0" data-aos="fade-down" data-aos-delay="300">Get noticed</h4>
+                            <h1 data-aos="fade-left mb-2" data-aos="fade-left" data-aos-delay="300">FASHION</h1>
+                            <h4 class="fs-carousel-text2" data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004
+                            </h4>
                         </div>
                     </div>
                     <div class="carousel-item carousel-3 carousel-style">
                         <div class="carousel-caption fs-slide3">
-                            <h4 class="fs-carousel-text1">Feel tree</h4>
-                            <h1 data-aos="fade-left">COLORS</h1>
-                            <h4 class="fs-carousel-text2" data-aos="fade-up">NEW YORK・SINCE 2004</h4>
+                            <h4 class="fs-carousel-text1 m-0" data-aos="fade-down" data-aos-delay="300">Feel tree</h4>
+                            <h1 data-aos="fade-left mb-2" data-aos="fade-left" data-aos-delay="300">COLORS</h1>
+                            <h4 class="fs-carousel-text2" data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004
+                            </h4>
                         </div>
                     </div>
                 </div>
