--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section id="top">
                 <div class="container-fuluid">
                     <div class="row">
-                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <nav class="navbar navbar-expand-lg transparent navbar-light bg-light">
                             <div class="container-fluid">
                                 <a class="navbar-brand" href="#">Colors</a>
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -78,6 +78,8 @@
                 </div>
             </section>
         </header>
+
+        <!-- carousel -->
         <section id="main">
             <div class="container-fulid">
                 <div class="row">
@@ -360,7 +362,7 @@
     </div>
 
     <!-- bootstrap  -->
-    <script src=".node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- <script src=".node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
@@ -369,6 +371,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
+        // setTimeout(AOS.refresh(), 5000);
     </script>
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" 　defer></script>
